--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -19,7 +19,7 @@ $gray-lighter ?=           lighten(#000, 93.5%); // #eee
 // Brand colors
 // -------------------------
 
-$brand-primary ?=         #428bca;
+$brand-primary ?=         #4b5456;
 $brand-success ?=         #5cb85c;
 $brand-warning ?=         #f0ad4e;
 $brand-danger ?=          #d9534f;
