--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -36,6 +36,11 @@
   .select-group-container
     margin-top 25px
     margin-bottom: 30px
+    .select-group-img
+      display inline-block
+      background-image url(/images/select-group.png)
+      width 295px
+      height 59px
 
 @media $screen-tablet-media-q
   #schedule-index
