--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -6,7 +6,7 @@ div(ng-controller='SchedulesStudiesCtrl')
                 .col-sm-4
                     a.back-btn(href="/")
                         span.back-logo-square
-                            i.fa.fa-th
+                            i.the-icon
                         span.group-name(bo-html="$routeParams.groupName")
                 .col-sm-4.text-center
                     span.schedule-updated-text
