--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -22,10 +22,13 @@
       white-space nowrap
       .back-logo-square
         background #3baba1
-        padding 6px 8px 7px 6px
+        padding 8px 8px 4px 8px
         color #fdfdfd
-        .fa
-          transform(rotate(90deg))
+        .the-icon
+          display inline-block
+          background-image url(/images/groups-list.png)
+          width 24px
+          height 24px
       .group-name
         margin-left 10px
 
@@ -44,7 +47,7 @@
     // Next week button
     .next-week-btn
       font-size 18px
-      font-weight 500
+      font-weight 200
       font-size-adjust 2px
       cursor pointer
       white-space nowrap
@@ -181,7 +184,7 @@
     // Day of week
     .lesson-cell-title
       margin 70px 0 30px 0
-      font-size 18px
+      font-size 22px
       text-align: center
 
       .lesson-cell-title-day
