--- a/app/styles/common/header.styl
+++ b/app/styles/common/header.styl
@@ -12,8 +12,19 @@ header
   .navbar-brand
     padding-top: 10px
     color: #4b5456
+    .logo
+      display inline-block
+      background-image url(/images/logo.png)
+      width 38px
+      height 35px
+      vertical-align middle
+      margin-left 30px
+    span
+      margin-left 10px
+      vertical-align middle
   ul.nav
     background: #f5f8fa
+    margin-right 20px
     li
       a
         font-size 18px
