images optimized marging, padding fixes

--- a/app/partials/schedules/studies.jade
+++ b/app/partials/schedules/studies.jade
@@ -5,7 +5,7 @@ div(ng-controller='SchedulesStudiesCtrl')
             .container.row-fluid(bindonce)
                 .col-sm-4
                     a.back-btn(href="/")
-                        span.back-logo-square
+                        div.back-logo-square
                             i.the-icon
                         span.group-name(bo-html="$routeParams.groupName")
                 .col-sm-4.text-center
