--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -21,8 +21,11 @@
       font-weight 400
       white-space nowrap
       .back-logo-square
+        float left
+        margin-top -1px
+        height 36px
         background #3baba1
-        padding 8px 8px 4px 8px
+        padding 4px
         color #fdfdfd
         .the-icon
           display inline-block
@@ -183,7 +186,7 @@
 
     // Day of week
     .lesson-cell-title
-      margin 40px 0 30px 0
+      margin 45px 0 30px 0
       font-size 22px
       text-align: center
 
@@ -208,7 +211,7 @@
           padding: 7px 20px;
         .lesson-cell-title-date
           color: #6b787b
-          font-weight 500
+          font-weight 300
 
   // Mobile schedule
   .lessons-mobile
