another padding, margin fixes

--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -17,6 +17,7 @@
 
     // Back to groups list button
     .back-btn
+      padding 4px 15px 4px 0
       font-size 24px
       font-weight 400
       white-space nowrap
