--- a/app/styles/_variables.styl
+++ b/app/styles/_variables.styl
@@ -1,7 +1,4 @@
 //
-// Variables
-$footer-height ?= 80px;
-$theme-color ?= #ff5900;
 // --------------------------------------------------
 
 // Global values
@@ -19,23 +16,24 @@ $gray-lighter ?=           lighten(#000, 93.5%); // #eee
 // Brand colors
 // -------------------------
 
-$brand-primary ?=         #4b5456;
-$brand-success ?=         #5cb85c;
-$brand-warning ?=         #f0ad4e;
+$brand-primary ?=         #373d3f;
+$brand-success ?=         #a2cd5c;
+$brand-warning ?=         #f16520;
 $brand-danger ?=          #d9534f;
-$brand-info ?=            #5bc0de;
+$brand-info ?=            #3baba1;
+$brand-info-bg ?=         #f5f8fa;
 
 // Scaffolding
 // -------------------------
 
 $body-bg ?=               #fff;
-$text-color ?=            $gray-dark;
+$text-color ?=            $brand-primary;
 
 // Links
 // -------------------------
 
-$link-color ?=            $brand-primary;
-$link-hover-color ?=      darken($link-color, 15%);
+$link-color ?=            darken($brand-info, 25%);
+$link-hover-color ?=      $brand-warning;
 
 // Typography
 // -------------------------
@@ -46,7 +44,8 @@ $font-family-monospace ?=   Monaco, Menlo, Consolas, "Courier New", monospace;
 $font-family-base ?=        $font-family-sans-serif;
 
 $font-size-base ?=          14px;
-$font-size-large ?=         ceil($font-size-base * 1.25); // ~18px
+$font-size-large ?=         ceil($font-size-base * 1.7); // ~24px
+$font-size-medium ?=        ceil($font-size-base * 1.25); // ~18px
 $font-size-small ?=         ceil($font-size-base * 0.85); // ~12px
 
 $line-height-base ?=        1.428571429; // 20/14
@@ -88,6 +87,18 @@ $component-active-bg ?=            $brand-primary;
 $caret-width-base ?=               4px;
 $caret-width-large ?=              5px;
 
+
+// Footer
+// -------------------------
+$footer-height ?=             100px;
+$footer-bg ?=                 $brand-primary
+$footer-color ?=              lighten($footer-bg, 50%)
+$footer-link-color ?=         lighten($footer-bg, 50%)
+$footer-link-hover-color ?=   $brand-warning
+$footer-widget-size ?=        35px
+$footer-widget-radius ?=      ($footer-widget-size / 2)
+
+
 // Tables
 // -------------------------
 
@@ -120,8 +131,7 @@ $btn-success-bg ?=                 $brand-success;
 $btn-success-border ?=             darken($btn-success-bg, 5%);
 
 $btn-warning-color ?=              #fff;
-$btn-warning-bg ?=                 $theme-color;
-/*$btn-warning-bg ?=                 $brand-warning;*/
+$btn-warning-bg ?=                 $brand-warning;
 $btn-warning-border ?=             darken($btn-warning-bg, 5%);
 
 $btn-danger-color ?=               #fff;
@@ -204,12 +214,10 @@ $zindex-modal ?=             1050;
 // Extra small screen / phone
 $screen-xs ?=                  480px;
 $screen-phone ?=               $screen-xs;
-$screen-phone-media-q ?=       "(max-width: " + ($screen-phone - 1) + ")"
 
 // Small screen / tablet
 $screen-sm ?=                  768px;
 $screen-tablet ?=              $screen-sm;
-$screen-tablet-media-q ?=      "(max-width: " + ($screen-tablet - 1) + ")"
 
 // Medium screen / desktop
 $screen-md ?=                  992px;
@@ -242,25 +250,25 @@ $grid-float-breakpoint ?=     $screen-tablet;
 // Basics of a navbar
 $navbar-height ?=                    50px;
 $navbar-margin-bottom ?=             $line-height-computed;
-$navbar-default-color ?=             #777;
-$navbar-default-bg ?=                #f8f8f8;
-$navbar-default-border ?=            darken($navbar-default-bg, 6.5%);
+$navbar-default-color ?=             $text-color;
+$navbar-default-bg ?=                #fff;
+$navbar-default-border ?=            transparent;
 $navbar-border-radius ?=             $border-radius-base;
 $navbar-padding-horizontal ?=        floor($grid-gutter-width / 2);
-$navbar-padding-vertical ?=          (($navbar-height - $line-height-computed) / 2);
+$navbar-padding-vertical ?=          (($navbar-height - $line-height-computed) / 4);
 
 // Navbar links
-$navbar-default-link-color ?=                #777;
-$navbar-default-link-hover-color ?=          #333;
-$navbar-default-link-hover-bg ?=             transparent;
-$navbar-default-link-active-color ?=         #555;
-$navbar-default-link-active-bg ?=            darken($navbar-default-bg, 6.5%);
+$navbar-default-link-color ?=                $link-color;
+$navbar-default-link-hover-color ?=          $link-hover-color;
+$navbar-default-link-hover-bg ?=             darken($brand-info-bg, 2%);
+$navbar-default-link-active-color ?=         #fff;
+$navbar-default-link-active-bg ?=            $brand-info
 $navbar-default-link-disabled-color ?=       #ccc;
 $navbar-default-link-disabled-bg ?=          transparent;
 
 // Navbar brand label
-$navbar-default-brand-color ?=               $navbar-default-link-color;
-$navbar-default-brand-hover-color ?=         darken($navbar-default-link-color, 10%);
+$navbar-default-brand-color ?=               lighten($brand-primary, 20%);
+$navbar-default-brand-hover-color ?=         $brand-primary;
 $navbar-default-brand-hover-bg ?=            transparent;
 
 // Navbar toggle
@@ -269,68 +277,34 @@ $navbar-default-toggle-icon-bar-bg ?=        #ccc;
 $navbar-default-toggle-border-color ?=       #ddd;
 
 
-// Inverted navbar
-//
-// Reset inverted navbar basics
-$navbar-inverse-color ?=                      $gray-light;
-$navbar-inverse-bg ?=                         #222;
-$navbar-inverse-border ?=                     darken($navbar-inverse-bg, 10%);
-
-// Inverted navbar links
-$navbar-inverse-link-color ?=                 $gray-light;
-$navbar-inverse-link-hover-color ?=           #fff;
-$navbar-inverse-link-hover-bg ?=              transparent;
-$navbar-inverse-link-active-color ?=          $navbar-inverse-link-hover-color;
-$navbar-inverse-link-active-bg ?=             darken($navbar-inverse-bg, 10%);
-$navbar-inverse-link-disabled-color ?=        #444;
-$navbar-inverse-link-disabled-bg ?=           transparent;
-
-// Inverted navbar brand label
-$navbar-inverse-brand-color ?=                $navbar-inverse-link-color;
-$navbar-inverse-brand-hover-color ?=          #fff;
-$navbar-inverse-brand-hover-bg ?=             transparent;
-
-// Inverted navbar search
-// Normal navbar needs no special styles or vars
-$navbar-inverse-search-bg ?=                  lighten($navbar-inverse-bg, 25%);
-$navbar-inverse-search-bg-focus ?=            #fff;
-$navbar-inverse-search-border ?=              $navbar-inverse-bg;
-$navbar-inverse-search-placeholder-color ?=   #ccc;
-
-// Inverted navbar toggle
-$navbar-inverse-toggle-hover-bg ?=            #333;
-$navbar-inverse-toggle-icon-bar-bg ?=         #fff;
-$navbar-inverse-toggle-border-color ?=        #333;
-
-
 // Navs
 // -------------------------
 
-$nav-link-padding ?=                          10px 15px;
-$nav-link-hover-bg ?=                         $gray-lighter;
+$nav-link-padding ?=                          10px 25px;
+$nav-link-hover-bg ?=                         darken($brand-info-bg, 60%);
 
 $nav-disabled-link-color ?=                   $gray-light;
 $nav-disabled-link-hover-color ?=             $gray-light;
 
-$nav-open-link-hover-color ?=                 #fff;
-$nav-open-caret-border-color ?=               #fff;
+$nav-open-link-hover-color ?=                 $link-hover-color;
+$nav-open-caret-border-color ?=               transparent;
 
 // Tabs
-$nav-tabs-border-color ?=                     #ddd;
+/*$nav-tabs-border-color ?=                     transparent;
 
-$nav-tabs-link-hover-border-color ?=          $gray-lighter;
+$nav-tabs-link-hover-border-color ?=          transparent;
 
-$nav-tabs-active-link-hover-bg ?=             $body-bg;
-$nav-tabs-active-link-hover-color ?=          $gray;
-$nav-tabs-active-link-hover-border-color ?=   #ddd;
+$nav-tabs-active-link-hover-bg ?=             #000;
+$nav-tabs-active-link-hover-color ?=          #000;
+$nav-tabs-active-link-hover-border-color ?=   #000;
 
-$nav-tabs-justified-link-border-color ?=            #ddd;
+$nav-tabs-justified-link-border-color ?=            #000;
 $nav-tabs-justified-active-link-border-color ?=     $body-bg;
 
 // Pills
 $nav-pills-active-link-hover-bg ?=            $component-active-bg;
 $nav-pills-active-link-hover-color ?=         #fff;
-
+*/
 
 // Pagination
 // -------------------------
