--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -56,7 +56,7 @@
             padding 20px 0 20px
             margin 0
             background darken($brand-info-bg, 7%)
-            border-bottom 1px solid darken($brand-info-bg, 14%)
+            border-top 1px solid darken($brand-info-bg, 14%)
           .course-content
             padding 0
             .line
