--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -2,6 +2,7 @@
 @import "/bower_components/bootstrap-stylus/stylus/mixins"
 
 #schedule-index
+  user-select(none)
   > .title
     margin-bottom: 40px
 
