--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -18,16 +18,16 @@
     // Back to groups list button
     .back-btn
       padding 4px 15px 4px 0
-      font-size 24px
+      font-size $font-size-large
       font-weight 400
       white-space nowrap
       .back-logo-square
         float left
         margin-top -1px
         height 36px
-        background #3baba1
+        background $brand-info
         padding 4px
-        color #fdfdfd
+        color #fff
         .the-icon
           display inline-block
           background-image url(/images/groups-list.png)
@@ -35,6 +35,11 @@
           height 24px
       .group-name
         margin-left 10px
+      &:hover
+        .back-logo-square
+          background darken($brand-info, 20%)
+        .group-name
+          color darken($link-color, 25%)
 
     // Update indicator
     .schedule-updated-text
@@ -84,7 +89,7 @@
         height: 50px
         width: 50px
         margin-left - 50px
-        color #4b5456
+        color $brand-primary
         text-align center
         padding 15px 0
 
@@ -94,7 +99,7 @@
           margin-left 10px
           opacity 0.4
           &.current
-            color: #ff4b00
+            color: $brand-warning
             opacity 1
 
           .lesson-time-number, .lesson-time-start
@@ -108,9 +113,7 @@
       // Main cell style
       .lesson-cell
         position relative
-        border-top: 1px solid #f5f8fa
-        border-left: 1px solid lighten(#f5f8fa, 60%)
-        border-right: 1px solid lighten(#f5f8fa, 60%)
+        border-top: 1px solid lighten($brand-info, 82%)
         overflow: hidden
         height: 64px
         text-align center
@@ -123,8 +126,8 @@
         // Atom class positioning
         .lesson-atom-cell
           position absolute
-          border-left 1px solid #f5f8fa
-          border-right 1px solid #f5f8fa
+          border-left 1px solid lighten($brand-info, 82%)
+          border-right 1px solid lighten($brand-info, 82%)
           padding 0 10px
 
           .lesson-name
@@ -144,13 +147,13 @@
           font-size 14px
           top 0
           bottom 31px
-          border-bottom 1px solid #f5f8fa
+          border-bottom 1px solid lighten($brand-info, 82%)
         .lesson-parity-2
           line-height 32px
           font-size 14px
           top 31px
           bottom 0
-          border-top 1px solid #f5f8fa
+          border-top 1px solid lighten($brand-info, 82%)
         .lesson-half-0
           left - 1px
           right - 1px
@@ -175,15 +178,6 @@
           .lesson-half-2
             left 139px
 
-    // Rounded dow corners
-    > :first-child + div.lessons-row
-      .lesson-cell
-        border-radius: 10px 10px 0 0
-        border-top: 1px solid lighten(#f5f8fa, 60%)
-    > :last-child
-      .lesson-cell
-        border-bottom: 1px solid lighten(#f5f8fa, 60%)
-        border-radius: 0 0 10px 10px
 
     // Day of week
     .lesson-cell-title
@@ -201,17 +195,17 @@
         width: 50px;
         margin-right: -55px;
         font-size 14px
-        color lighten(#6b787b, 80%)
+        color lighten(#brand-primary, 80%)
         font-weight 100
 
       &.current
         .lesson-cell-title-day
           border-radius: 5px
-          background: #ff4b00
+          background: $brand-warning
           color: #fff
           padding: 7px 20px;
         .lesson-cell-title-date
-          color: #6b787b
+          color: #brand-primary
           font-weight 300
 
   // Mobile schedule
