--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -195,7 +195,7 @@
         width: 50px;
         margin-right: -55px;
         font-size 14px
-        color lighten(#brand-primary, 80%)
+        color lighten(#brand-primary, 30%)
         font-weight 100
 
       &.current
@@ -205,7 +205,7 @@
           color: #fff
           padding: 7px 20px;
         .lesson-cell-title-date
-          color: #brand-primary
+          color: $brand-primary
           font-weight 300
 
   // Mobile schedule
