images path fixed to relative

--- a/app/styles/groups/index.styl
+++ b/app/styles/groups/index.styl
@@ -38,7 +38,7 @@
     margin-bottom: 30px
     .select-group-img
       display inline-block
-      background-image url(/images/select-group.png)
+      background-image url(../images/select-group.png)
       width 295px
       height 59px
 
