--- a/app/styles/schedules/schedules.styl
+++ b/app/styles/schedules/schedules.styl
@@ -30,7 +30,7 @@
         color #fff
         .the-icon
           display inline-block
-          background-image url(/images/groups-list.png)
+          background-image url(../images/groups-list.png)
           width 24px
           height 24px
       .group-name
