--- a/app/styles/icons/logo.styl
+++ b/app/styles/icons/logo.styl
@@ -1,6 +1,6 @@
 .stico-logo
   display inline-block
-  background-image url(/images/logo.png)
+  background-image url(../images/logo.png)
   width 38px
   height 35px
   vertical-align middle
